my-apps/dataflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataflow
  labels:
    app.kubernetes.io/component: monitoring
