my-apps/dataflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataflow
  namespace: dataflow
  labels:
    app: dataflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataflow
  template:
    metadata:
      labels:
        app: dataflow
    spec:
      containers:
        - name: dataflow
          image: ghcr.io/sandesh-solabannavar/dataflow:741a675
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
