my-apps/dataflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataflow
  labels:
    app: dataflow
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: dataflow
